# Amazcope

./: .gitignore  .pre-commit-config.yaml  README.md  quick-test.sh
.github/: copilot-instructions.md
.github/workflows/: act.sh  cd.yml  ci.yml  secrets-example.json
backend/: .coveragerc  Dockerfile  pyproject.toml  pytest.ini
backend/prometheus/: prometheus.yml
backend/src/: .env.example  backend-entrypoint.sh  cli.py  erd.dot  main.py  scheduler-entrypoint.sh  worker-entrypoint.sh
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2821cc1df801_.py  38e96f2fc953_merge_heads.py  438f8fb187f3_.py  5547a336c530_.py  83ed187c9110_.py  c4fef48e2d17_.py  d41a4f47aa79_.py  f7b792cfde2a_add_denormalized_fields_to_product.py  fd2c4d97639a_convert_integer_ids_to_uuid.py
backend/src/alert/: models.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  chat.py  metrics.py  notifications.py  optimization.py  product_tracking.py  router.py  suggestions.py  user_products.py  user_settings.py
backend/src/core/: database.py  dramatiq_app.py  exceptions.py  models.py  redis.py  scheduler.py  security.py  sentry.py  utils.py
backend/src/core/config/: __init__.py  ai.py  apify.py  app.py  celery.py  database.py  dramatiq.py  email.py  frontend.py  redis.py  sentry.py
backend/src/mcp_server/: __init__.py  resources.py  server.py  tools.py  tools_remaining.py
backend/src/middleware/: rate_limit.py
backend/src/notification/: channels.py  models.py  topics.py  utils.py
backend/src/optimization/: models.py
backend/src/products/: commands.py  models.py  tasks.py
backend/src/pydantic_commands/: __init__.py  base.py  decorators.py  executor.py  parser.py  registry.py
backend/src/schemas/: apify_schemas.py  metrics.py  notification.py  optimization.py  product_tracking.py  scraper_response.py  suggestion.py  user_product.py
backend/src/scrapper/: product_tracking_service.py
backend/src/services/: apify_service.py  auth_service.py  cache_service.py  metric_field_registry.py  metrics_service.py  notification_service.py  optimization_service.py  security_notification_service.py
backend/src/system/: checks.py  commands.py  registries.py  tasks.py
backend/src/templates/: daily-report.html
backend/src/users/: commands.py  models.py  schemas.py
backend/src/utils/: ai_tools.py  db_helpers.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_notifications_comprehensive.py  test_notifications_simple.py  test_product_tracking_comprehensive.py  test_product_tracking_expanded.py  test_product_tracking_simple.py  test_suggestions.py  test_user_products_expanded.py  test_user_products_simple.py  test_user_settings_comprehensive.py
backend/tests/test_mcp_server/: test_mcp_tools.py
backend/tests/test_services/: test_apify_service.py  test_cache_service.py  test_metrics_service.py  test_notification_service.py  test_product_tracking_expanded.py  test_product_tracking_service.py
backend/tests/test_utils/: test_utils.py
deployment/aws/: README.md  alb.tf  deploy-frontend.sh  ecs.tf  frontend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deployment/docker-compose/: docker-compose.yml
devops/: .env.example  .gitignore  docker-compose.yml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
devops/grafana/: README.md  dashboards.tf  datasources.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  DESIGN_DECISIONS.md  SETUP_GUIDE.md
docs/architecture/: aws.excalidraw  (+2 more)
frontend/: .env.example  .env.local  .env.production.template  .prettierrc.js  Dockerfile  eslint.config.mts  fix-starscriber-calls.js  index.html  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  remove-console-logs.js  remove-use-client.sh  tailwind.config.ts  test-auth-service.js  tsconfig.json  vite.config.ts
(+124 files in other folders)
